--- a/src/navigation-drawer/navigation-drawer.scss
+++ b/src/navigation-drawer/navigation-drawer.scss
@@ -1,11 +1,16 @@
 /* Main Navigation Drawer state styles */
+
+$background: #DADEE4;
+$overlay: rgba(136,136,136,0.5);
+$shadow: rgba(80, 80, 80, 0.1);
+
 .ig-nav-drawer {
     box-sizing: border-box;
     min-height: 100%;
     z-index: 999;
     max-width: 90%;
     overflow-x: hidden;
-    background-color: #DADEE4;
+    background-color: $background;
     padding: 0.7em;
     position: fixed;
     left: 0;
@@ -19,45 +24,55 @@
     transition-duration: 0.25s, 0.25s;
     transition-timing-function: ease-in, ease-in;
     transition-delay: 0s, 0s;
-    box-shadow: 2px 2px 2px 1px rgba(80, 80, 80, 0.1);
-}  
-
-.ig-nav-drawer.collapsed {
-    transform: translate3d(-300px,0px,0px);
-    -webkit-transform: translate3d(-300px,0px,0px);    
-}
- 
-.ig-nav-drawer.right {
-    left: auto;
-    right: 0;
-    box-shadow: -2px -2px 2px 1px rgba(80, 80, 80, 0.1);
-}
-.ig-nav-drawer.collapsed.right {
-    transform: translate3d(300px,0px,0px);
-    -webkit-transform: translate3d(300px,0px,0px);
-}
-
-.ig-nav-drawer.mini {
-    width: 60px;
-    transition-duration: 0.2s, 0.2s;
-}
-
-.ig-nav-drawer.pinned {
-    position: relative;
-    box-shadow: none; 
-}
-.ig-nav-drawer.pinned.collapsed {
-    transform: none;
-    -webkit-transform: none;
-    width: 0;      
-    padding: 0;
-    overflow: hidden;
-}
+    box-shadow: 2px 2px 2px 1px $shadow;
     
-/* Utility class for active pan */
+    /* states */
+    
+    &.collapsed {
+        transform: translate3d(-300px,0px,0px);    
+    }
+    
+    &.right {
+        left: auto;
+        right: 0;
+        box-shadow: -2px -2px 2px 1px $shadow;
+    }
+    
+    &.collapsed.right {
+        transform: translate3d(300px,0px,0px);
+    }
+    
+    &.mini {
+        width: 60px;
+        transition-duration: 0.2s, 0.2s;
+    }
+    
+    &.pinned {
+        position: relative;
+        box-shadow: none; 
+    }
+    
+    &.pinned.collapsed {
+        transform: none;
+        width: 0;      
+        padding: 0;
+        overflow: hidden;
+    }
+}  
+    
+/* Utility classes for active pan */
 .ig-nav-drawer.panning {
     overflow-x:hidden;
     transition: none;      
+}
+
+.ig-nav-drawer-overlay.panning {
+    transform: translate3d(0,0,0); /* try layer creation manually in advance for opacity */
+    transition: none;
+    
+    &.hidden {
+        visibility: visible;    
+    }
 }
 
 .style-dummy {
@@ -68,18 +83,12 @@
     visibility: hidden; /* potentially don't use this? */
 }
 
-.ig-nav-drawer-overlay.panning {
-    transform: translate3d(0,0,0); /* try layer creation manually in advance for opacity */
-    transition: none;
-}
-    .ig-nav-drawer-overlay.hidden.panning {
-        visibility: visible;    
-    }
+
 
 /* Navigation Drawer overlay styles */
 .ig-nav-drawer-overlay {
     opacity: 1;
-    background-color: rgba(136,136,136,0.5);
+    background-color: $overlay;
    
    
     transition-property: opacity, visibility;
@@ -94,13 +103,15 @@
     width: 100%;
     height: 100%;
     visibility: visible;
-}
-.ig-nav-drawer-overlay.hidden {
-    transition-timing-function: ease-in, step-end;
-    /* use visibility so opacity can be animated */
-    visibility: hidden; 
-    opacity: 0;
-}
-.ig-nav-drawer-overlay.pinned {
-    display: none;            
+    
+    &.hidden {
+        transition-timing-function: ease-in, step-end;
+        /* use visibility so opacity can be animated */
+        visibility: hidden; 
+        opacity: 0;
+    }
+    
+    &.pinned {
+        display: none;            
+    }
 }
