--- a/src/themes/zero-blocks.scss
+++ b/src/themes/zero-blocks.scss
@@ -3,7 +3,8 @@
 * TODO: Move global color variables here.
 */
 
+@import "components/material_icons";
 @import "../navigation-drawer/navigation-drawer";
 @import "../list/list";
 @import "../tab/tab";
-@import "../carousel/carousel"
+@import "../carousel/carousel";
