--- a/src/tab/tab.scss
+++ b/src/tab/tab.scss
@@ -1,42 +1,36 @@
 $ig-light-blue: #0099ff;
 $badge-background-color: #dd524d;
+$tab-bar-background: #444;
+
+@function set-tab-color($color) {
+  @if (lightness($color) > 50) {
+    @return #000; // Lighter backgorund, return dark color
+  } @else {
+    @return #fff; // Darker background, return light color
+  }
+}
 
 ig-tab-bar {
     display: block;
     height: 100%;
     .ig-tab-bar-inner {
         position: absolute;
-        &.tab-bar-top {
-            ul {
-                top: 0;
-                // border-top: none;
-                box-shadow: 0px 2px 4px 0px rgba(72, 72, 72, 0.10);
-            }
-        }
-        &.tab-bar-bottom {
-            ul {
-                bottom: 0;
-                // border-bottom: none;
-                box-shadow: 0px -2px 4px 0px rgba(72, 72, 72, 0.10);
-            }
-        }
-    }
-    ul {
-        position: absolute;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        // border-top: 1px solid rgba(72, 72, 72, 0.15);
-        // border-bottom: 1px solid rgba(72, 72, 72, 0.15);
-        width: 100%;
-        height: 56px;
-        margin: 0;
-        padding: 0;
-        background: #444;
-        overflow: hidden;
-        li {
-            position: relative;
+        &__menu {
+            position: absolute;
             display: flex;
+            justify-content: space-around;
+            align-items: center;
+            width: 100%;
+            height: 56px;
+            margin: 0;
+            padding: 0;
+            background: $tab-bar-background; //experimental
+            color: set-tab-color($tab-bar-background); //experimental
+            overflow: hidden;
+        }
+        &__menu-item {
+            display: flex;
+            position: relative;
             flex-flow: column wrap;
             align-items: center;
             min-width: 80px;
@@ -47,111 +41,102 @@ ig-tab-bar {
             text-transform: uppercase;
             white-space: nowrap;
             text-overflow: ellipsis;
-            .tab-color {
-                display: table;
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                width: 100%;
-                height: 56px;
-                &:after {
-                    top: 50%;
-                    left: 50%;
-                    content: '';
-                    transform: translateY(-50%);
-                    width: 25px;
-                    height: 25px;
-                    margin-top: -25px;
-                    margin-left: 0;
-                    border-radius: 50%;
-                    transform: scale(0);
-                    position:absolute;
-                }
-                &--1:after {
-                    background-color: #0e7a6c;
-                }
-                &--2:after {
-                    background: #475b64;
-                }
-                &--3:after {
-                    background: #6e4a45;
-                }
-                &--4:after {
-                    background: #9c736f;
-                }
+        }
+        .tab-color {
+            display: table;
+            position: absolute;
+            width: 100%;
+            height: 56px;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            &:after {
+                top: 50%;
+                left: 50%;
+                content: '';
+                transform: translateY(-50%);
+                width: 25px;
+                height: 25px;
+                margin-top: -25px;
+                margin-left: 0;
+                border-radius: 50%;
+                transform: scale(0);
+                position:absolute;
             }
-
-            .tab-icon {
-                height: 24px;
-                width: 24px;        
-                position: relative;
-                z-index: 1;
-                opacity: .50;
-                color: #fff;
-                &.icon-more {
-                    font-size: 30px;
-                    line-height: 15px;
-                    color: #fff;
-                    background: none;
-                }
-
-                .badge {
-                    height: 16px;
-                    display: inline-block;
-                    color: #fff;
-                    background-color: $badge-background-color;
-                    line-height: 16px;
-                    margin-left: -40%;
-                    font-size: 12px;                    
-                    position: absolute;
-                    top: 0;                    
-                    left: 0;
-                    border-radius: 50%;
-                    padding: 2px 5px 2px 5px;
-
-                    &.hidden{
-                        display: none;
-                    }
-                }
+            // experimental
+            &--1:after {
+                background: #0e7a6c;
             }
-
-            .tab-label {
-                color: white;
-                font-size: 12px;
-                line-height: 12px;
-                transform: scale(1);
-                padding-top: 5px;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                z-index: 1;
-                opacity: .50;
+            &--2:after {
+                background: #475b64;
             }
-            &.selected {
-                .tab-icon {
-                    opacity: 1;
-                    transform: translateY(-2px);
-                    transition: all .25s ease-in;
-                }
-                .tab-label {
-                    // font-size: 14px;
-                    // line-height: 14px;
-                    // padding-top: 2px;
-                    // transition: all .25s ease-in-out;
-                    opacity: 1;
-                }
-                .tab-color:after {
-                    animation: selected .8s ease forwards;
-                }
+            &--3:after {
+                background: #6e4a45;
             }
-
-            &.disabled {
-                opacity: 0.5;
-                cursor: default;
+            &--4:after {
+                background: #9c736f;
             }
         }
-        
+        .tab-icon {
+            position: relative;
+            height: 24px;
+            z-index: 1;
+            opacity: .75;
+            &__badge {
+                display: flex;
+                position: absolute;
+                justify-content: center;
+                align-items: center;
+                min-width: 14px;
+                height: 14px;
+                line-height: 16px;
+                color: #fff;
+                background-color: $badge-background-color;
+                margin-right: -25%;
+                font-size: 12px;                  
+                top: 0;                    
+                right: 0;
+                border-radius: 50% 50%;
+                padding: 2px;
+                box-shadow: 0px 1px 2px 0px rgba(72, 72, 72, 0.50);
+                &--hidden {
+                    display: none;
+                }
+            }
+        }
+        .tab-label {
+            max-width: 168px;
+            padding-top: 5px;
+            font-size: 12px;
+            line-height: 12px;
+            text-transform: uppercase;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            z-index: 1;
+            opacity: .75;
+        }
+        &__menu-item--selected {
+            .tab-icon,
+            .tab-label {
+                opacity: 1;
+                transition: all .25s ease-in;
+            }
+            .tab-color:after {
+                animation: selected .8s ease forwards;
+            }
+        }
+        &__menu-item--disabled {
+            opacity: 0.5;
+            cursor: default;
+        }
+        &__menu--top {
+            top: 0;
+            box-shadow: 0px 2px 4px 0px rgba(72, 72, 72, 0.10);
+        }
+        &__menu--bottom {
+            box-shadow: 0px -2px 4px 0px rgba(72, 72, 72, 0.10);
+        }
     }
 }
 
@@ -168,9 +153,9 @@ ig-tab {
     }
 }
 
- div[ig-tab-view] {
-    display:none;
-}
+//  div[ig-tab-view] {
+//     display:none;
+// }
 
 @keyframes selected {
 	from {transform:scale(0) }
