--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -49,50 +49,54 @@ $success-color: #4CAF50 !default;
 $error-color: #F44336 !default;
 
 // Color Palette
-$primary-color-50: gen-color($primary-color, 50);
-$primary-color-100: gen-color($primary-color, 100);
-$primary-color-200: gen-color($primary-color, 200);
-$primary-color-300: gen-color($primary-color, 300);
-$primary-color-400: gen-color($primary-color, 400);
-$primary-color-500: $primary-color;
-$primary-color-600: gen-color($primary-color, 600);
-$primary-color-700: gen-color($primary-color, 700);
-$primary-color-800: gen-color($primary-color, 800);
-$primary-color-900: gen-color($primary-color, 900);
-$primary-color-A100: gen-color($primary-color, 'A100');
-$primary-color-A200: gen-color($primary-color, 'A200');
-$primary-color-A400: gen-color($primary-color, 'A400');
-$primary-color-A700: gen-color($primary-color, 'A700');
+$colors: (
+    primary: (
+        100: gen-color($primary-color, 50),
+        200: gen-color($primary-color, 100),
+        300: gen-color($primary-color, 300),
+        400: gen-color($primary-color, 400),
+        500: $primary-color,
+        600: gen-color($primary-color, 600),
+        700: gen-color($primary-color, 700),
+        800: gen-color($primary-color, 800),
+        900: gen-color($primary-color, 900),
+        A100: gen-color($primary-color, 'A100'),
+        A200: gen-color($primary-color, 'A200'),
+        A400: gen-color($primary-color, 'A400'),
+        A700: gen-color($primary-color, 'A700'),
+    ),
+    secondary: (
+        100: gen-color($secondary-color, 50),
+        200: gen-color($secondary-color, 100),
+        300: gen-color($secondary-color, 300),
+        400: gen-color($secondary-color, 400),
+        500: $secondary-color,
+        600: gen-color($secondary-color, 600),
+        700: gen-color($secondary-color, 700),
+        800: gen-color($secondary-color, 800),
+        900: gen-color($secondary-color, 900),
+        A100: gen-color($secondary-color, 'A100'),
+        A200: gen-color($secondary-color, 'A200'),
+        A400: gen-color($secondary-color, 'A400'),
+        A700: gen-color($secondary-color, 'A700'),
+    ),
+    accent: (
+        100: gen-color($accent-color, 50),
+        200: gen-color($accent-color, 100),
+        300: gen-color($accent-color, 300),
+        400: gen-color($accent-color, 400),
+        500: $accent-color,
+        600: gen-color($accent-color, 600),
+        700: gen-color($accent-color, 700),
+        800: gen-color($accent-color, 800),
+        900: gen-color($accent-color, 900),
+        A100: gen-color($accent-color, 'A100'),
+        A200: gen-color($accent-color, 'A200'),
+        A400: gen-color($accent-color, 'A400'),
+        A700: gen-color($accent-color, 'A700'),
+    )
+);
 
-$secondary-color-50: gen-color($secondary-color, 50);
-$secondary-color-100: gen-color($secondary-color, 100);
-$secondary-color-200: gen-color($secondary-color, 200);
-$secondary-color-300: gen-color($secondary-color, 300);
-$secondary-color-400: gen-color($secondary-color, 400);
-$secondary-color-500: $secondary-color;
-$secondary-color-600: gen-color($secondary-color, 600);
-$secondary-color-700: gen-color($secondary-color, 700);
-$secondary-color-800: gen-color($secondary-color, 800);
-$secondary-color-900: gen-color($secondary-color, 900);
-$secondary-color-A100: gen-color($secondary-color, 'A100');
-$secondary-color-A200: gen-color($secondary-color, 'A200');
-$secondary-color-A400: gen-color($secondary-color, 'A400');
-$secondary-color-A700: gen-color($secondary-color, 'A700');
-
-$accent-color-50: gen-color($accent-color, 50);
-$accent-color-100: gen-color($accent-color, 100);
-$accent-color-200: gen-color($accent-color, 200);
-$accent-color-300: gen-color($accent-color, 300);
-$accent-color-400: gen-color($accent-color, 400);
-$accent-color-500: $accent-color;
-$accent-color-600: gen-color($accent-color, 600);
-$accent-color-700: gen-color($accent-color, 700);
-$accent-color-800: gen-color($accent-color, 800);
-$accent-color-900: gen-color($accent-color, 900);
-$accent-color-A100: gen-color($accent-color, 'A100');
-$accent-color-A200: gen-color($accent-color, 'A200');
-$accent-color-A400: gen-color($accent-color, 'A400');
-$accent-color-A700: gen-color($accent-color, 'A700');
 
 /* 2. Badges
    ========================================================================== */
