--- a/src/themes/utilities/_mixins.scss
+++ b/src/themes/utilities/_mixins.scss
@@ -1,3 +1,21 @@
+// Block Element
+// @access public
+// @param {String} $element - Element's name
+@mixin e($element) {
+    &__#{$element} {
+        @content;
+    }
+}
+
+// Block Modifier
+// @access public
+// @param {String} $modifier - Modifier's name
+@mixin m($modifier) {
+    &--#{$modifier} {
+        @content;
+    }
+}
+
 @mixin user-select {
   -webkit-user-select: none; /* webkit (safari, chrome) browsers */
   -moz-user-select: none; /* mozilla browsers */
