--- a/src/themes/zero-blocks.scss
+++ b/src/themes/zero-blocks.scss
@@ -3,7 +3,14 @@
 * TODO: Move global color variables here.
 */
 
-@import "components/material_icons";
+// new - always import base and utilities first
+@import 'base/index';
+@import 'utilities/index';
+// contains all theme specifics
+@import 'material/manifest';
+
+
+// old way of importing each individual module sass file
 @import "../navigation-drawer/navigation-drawer";
 @import "../list/list";
 @import "../tab/tab";
