--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -143,7 +143,7 @@ $button-floating-background: $primary-color;
 
 /* 9. Fonts
    ========================================================================== */
-$titillium-font-path: '../../fonts/titillium/' !default;
+$titillium-font-path: '../fonts/titillium/' !default;
 
 /* 10. Forms
    ========================================================================== */
