-styled input text and input password

--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -47,6 +47,7 @@ $secondary-color: $byzantium !default;
 $accent-color: $yellow-orange !default;
 $success-color: #4CAF50 !default;
 $error-color: #F44336 !default;
+$warn-color: orange;
 
 // Color Palette
 $colors: (
@@ -152,11 +153,12 @@ $input-min-height: 4.375rem !default;
 $input-font-size: 1rem !default;
 $input-color: #484848 !default;
 $input-caret-color: $primary-color;
-$input-line-height: 1.875rem !default;
+$input-line-height: 1.5em !default;
 $input-border-color: rgba(117, 117, 117, .5) !default;
 $input-border: 1px solid $input-border-color !default;
-$input-border-error: 2px solid $error-color;
 $input-border-success: 2px solid $success-color;
+$input-border-warn: 2px solid $warn-color;
+$input-border-error: 2px solid $error-color;
 $input-border-color-focus: $primary-color !default;
 $input-border-focus: 2px solid $input-border-color-focus !default;
 $input-background: #fff !default;
@@ -165,13 +167,13 @@ $input-placeholder-color: $input-border-color;
 
 $input-error-color:  $error-color !default;
 $input-success-color: $success-color !default;
-$input-disabled-color: #D1D1D1 !default;
+$input-disabled-color: lighten($input-color, 25%) !default;
 $input-disabled-solid-color: $input-disabled-color !default;
 
 $label-color: #757575 !default;
 $label-focus-color: $primary-color !default;
-$label-active-color: #D1D1D1 !default;
-$label-font-size: 1rem !default;
+$label-active-color: lighten($label-color, 20%) !default;
+$label-font-size: 1em !default;
 $label-focus-font-size: .75rem !default;
 
 // Radio Buttons
