--- a/src/themes/material/modules/_inputs.scss
+++ b/src/themes/material/modules/_inputs.scss
@@ -1,8 +1,4 @@
-*::-webkit-input-placeholder {
-    -webkit-text-fill-color: $input-placeholder-color;
-}
-
-.ig-form-input {
+@include b(ig-form-input) {
 	@extend %ig-input-display;
 
 	@include e(label) {
@@ -11,45 +7,53 @@
 
 	@include e(input) {
 		@extend %ig-form-input;
-		
 		&:focus {
-			@extend %ig-form-input--active;
+			@extend %ig-form-input--focused;
+		}
+		&:disabled {
+			@extend %ig-form-input--disabled;
+		}
+		&.ng-valid[required],
+		&.ng-valid.required  {
+			@extend %ig-form-input--success;
+			~ label {
+				@extend %ig-form-label--success;
+			}
+		}
+		&.ng-invalid:not(form) {
+			@extend %ig-form-input--error;
+			~ label {
+				@extend %ig-form-label--error;
+			}
 		}
 	}
 
-	@include m(active) {
+	@include m(placeholder) {
+		@include e(label) {
+			@extend %ig-form-label--float;
+		}
+	}
+
+	@include m(filled) {
 		@extend %ig-input-display;
 
 		@include e(label) {
 			@extend %ig-form-label;
-			@extend %ig-form-label--active;
+			@extend %ig-form-label--filled;
+			@extend %ig-form-label--float;
 		}
 		
 		@include e(input) {
 			@extend %ig-form-input;
-			@extend %ig-form-input--active;
 		}
 	}
 
-	
-	// // Handle error style
-	// &--error input,
-	// &--error input:focus {
-	// 	color: $input-error-color;
-	// 	border-bottom: $input-border-error;
-	// }
-	// &--error label,
-	// &--error:after {
-	// 	color: $input-error-color !important;
-	// }
+	@include m(focused) {
+		@extend %ig-input-display;
 
-	// // Handle success style
-	// &--success input,
-	// &--success input:focus {
-	// 	color: $input-success-color;
-	// 	border-bottom: $input-border-success;
-	// }
-	// &--success:after {
-	// 	color: $input-success-color !important;
-	// }
+		@include e(label) {
+			@extend %ig-form-label;
+			@extend %ig-form-label--focused;
+		}
+	}
 }
